<?xml version="1.0"?>
<package format="2">
  <name>object_detection_gl_ros</name>
  <version>0.0.1</version>
  <description>The object_detection_gl_ros package</description>

  <maintainer email="project@soslab.co">SOSLAB Co., Ltd.</maintainer>

  <license>MIT</license>

  <url type="website">http://soslab.co</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>


  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>laser_geometry</exec_depend>


</package>
